--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ h1 {
   width: 90%;
   max-width: 1024px;
   margin: auto;
-  padding: 5px;
+  padding: 20px 10px;
   display: flex;
   flex-direction: column;
   align-content: flex-end;
@@ -77,6 +77,7 @@ h1 {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+  margin-right: 70px;
 }
 
 .quote {
